--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 #purposecontainer{
-	background-color: red;
+	background-color: rgb(254, 254, 254);
 }
 
 div#password {
@@ -39,16 +39,17 @@ input#user {
 }
 
 div#contain {
-    width: 40%;
+    width: 50%;
     height: 270px;
     min-width: 320px;
     /* margin: auto; */
     /* margin-top: 0px; */
     padding-bottom: 323px;
-    left: 30%;
+    left: 25%;
     background-color: aliceblue;
     top: 30%;
     position: absolute;
+    box-shadow: 0px 1px 4px rgba(0,0,0,.4);
     border-radius: 20px;
 }
 input#pass {
@@ -72,7 +73,7 @@ label#plab {
 }
 
 #technologycontainer{
-	background-color: green;
+	background-color: rgba(0, 128, 0, 0.2);
 }
 
 #learncontainer{
@@ -96,16 +97,28 @@ body{
 
 
 div#welcome {
-Position: absolute;left: 30%;top: 20%;color: #6E81FF;font-size: 40px;font-family: Helvetica;}
+Position: absolute;left: 25%;top: 20%;color: #6E81FF;font-size: 40px;font-family: Helvetica;}
 
 #weltitle{
+	font-size: 50px;
+	/* color: #C6DCFF; */
+}
+
+#technology{
+	Position: relative;
+	left: 25%;
+	width: 36%;
+	display: block;
+	color: #6E81FF;
 	font-size: 40px;
+	font-family: Helvetica;
 }
 
 input.btn.btn-default {
     position: absolute;
     right: 30px;
     margin-top: 20px;
+    box-shadow: 0px 1px 1px rgba(0,0,0,.2);
     height: 60px;
     width: 120px;
     background-color: rgba(109, 182, 255, 0.59);
@@ -164,14 +177,24 @@ h2#weltitle {}
 div#purpose {
     overflow: hidden;
     position: relative;
-    top: 10%;
+    top: 20%;
     width: 40%;
-    left: 30%;
+    left: 20%;
+    color: saddlebrown;
 }
 
 div#purposeParagraph {
     Position: absolute;
-    top: 30%;
+    top: 33%;
     left: 30%;
-    width: 40%;
+    width: 46%;
+    height: 300px;
+}
+
+div#techbubblecontainer {
+    width: 80%;
+    margin: auto;
+    margin-top: 100px;
+    height: 10px;
+    background-color: #060606;
 }
