--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 	/* display: block; */
 	/* top: 0; */
 	/* margin-top: -100px; */
-	height: 100%;
+	min-height: 100%;
 	position: relative;
 	margin: 0;
 	/* text-align: center; */
@@ -12,11 +12,11 @@
 	/* min-width: 100%; */
 	/* min-height: 100%; */
 	/* max-width:100%; */
-	/* max-height:100%; */
 }
 
 #welcomecontainer{
 	background-color: #C6DCFF;
+	box-shadow: 0px 1px 2px rgba(0,0,0,.4);
 }
 
 #purposecontainer{
@@ -39,13 +39,13 @@ input#user {
 }
 
 div#contain {
-    width: 50%;
+    width: 600px;
     height: 270px;
     min-width: 320px;
     /* margin: auto; */
     /* margin-top: 0px; */
     padding-bottom: 323px;
-    left: 25%;
+    left: calc(50% - 300px);
     background-color: aliceblue;
     top: 30%;
     position: absolute;
@@ -74,10 +74,12 @@ label#plab {
 
 #technologycontainer{
 	background-color: rgba(0, 128, 0, 0.2);
+	padding-bottom: 100px;
 }
 
 #learncontainer{
-	background-color: blue;
+	background-color: rgba(182, 182, 255, 0.42);
+	position: relative;
 }
 
 #createdContainer{
@@ -94,10 +96,37 @@ body{
 	height:100%;
 }
 
+.bubble{
+	border-radius: 50%;
+	height: 220px;
+	background-image: url(test.png);
+	width: 220px;
+	background-size: cover;
+	position: relative;
+	overflow: hidden;
+}
+#overlay1{
+	opacity: 1;
+	
+}
+#overlay1:hover{
+	opacity:0;
+}
+
+#overlay2{
+	opacity: 0;
+	transition: opacity 0.2s ease;
+	background-color: rgba(0,0,0,.5);
+}
+#overlay2:hover{
+	opacity: 1;
+}
+
+
 
 
 div#welcome {
-Position: absolute;left: 25%;top: 20%;color: #6E81FF;font-size: 40px;font-family: Helvetica;}
+position: absolute;left: 25%;top: 20%;color: #6E81FF;font-size: 40px;font-family: Helvetica;}
 
 #weltitle{
 	font-size: 50px;
@@ -105,9 +134,10 @@ Position: absolute;left: 25%;top: 20%;color: #6E81FF;font-size: 40px;font-family
 }
 
 #technology{
-	Position: relative;
+	position: absolute;
 	left: 25%;
-	width: 36%;
+	top: 0;
+	width: 75%;
 	display: block;
 	color: #6E81FF;
 	font-size: 40px;
@@ -149,31 +179,6 @@ div#register {
     bottom: 10%;
 }
 
-@media (max-width: 720px) {
-	div#contain{
-		left: calc(50% - 161px);
-	}
-
-	html{
-		min-width: 320px;
-	}
-	
-	div#welcome {
-	Position: absolute;
-	left: calc(50% - 159px);
-	top: 22%;
-	color: #6E81FF;
-	font-size: 30px;
-	font-family: Helvetica;
-}
-#weltitle{
-	font-size: 30px;
-}
-
-}
-
-h2#weltitle {}
-
 div#purpose {
     overflow: hidden;
     position: relative;
@@ -192,9 +197,200 @@ div#purposeParagraph {
 }
 
 div#techbubblecontainer {
+    width: 1100px;
+    margin-left: calc(50% - 550px);
+    height: auto;
+    display: inline-block;
+    border-radius: 50px;
+    margin-top: 150px;
+    background-color: white;
+}
+
+div#frontendbubbles {
+    text-align: center;
+    margin: auto;
+    overflow: hidden;
+    height: auto;
+    /* background-color: red; */
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.bubbleCont {
+    width: 220px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 30px;
+    /* background-color: blue; */
+    height: 220px;
+    display: inline-block;
+    position: relative;
+}
+
+.bubbleoverlay1 {
+width: 100%;position: absolute;text-align: center;top: 38%;color: green;font-size: 30px;height: auto;opacity: 1;}
+
+.bubbleoverlay2 {
+    width: 80%;
+    left: 10%;
+    height: auto;
+    position: absolute;
+    color: #26FFBE;
+    top: 25%;
+    /* opacity: 0; */
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    /* background-color: rgba(0,0,0,.4); */
+    border-radius: 50%;
+}
+
+div#backendtechtitle {
+    width: 36%;
+    margin-left: 19%;
+}
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 1200px){
+
+	div#techbubblecontainer {
+    /* min-width: 320px; */
+    width: 750px;
+    margin-left: calc(50% - 375px);
+    height: auto;
+    display: inline-block;
+    margin-top: 150px;
+    background-color: white;
+}
+div#contain{
+		left: 25%;
+		width: 50%;
+	}
+
+
+}
+
+@media (max-width: 800px) {
+	div#contain{
+		left: calc(50% - 161px);
+		width: 50%;
+	}
+
+	
+
+	html{
+		min-width: 320px;
+	}
+	
+	div#welcome {
+	Position: absolute;
+	left: calc(50% - 159px);
+	top: 15%;
+	color: #6E81FF;
+	font-size: 30px;
+	font-family: Helvetica;
+}
+#weltitle{
+	font-size: 40px;
+}
+
+div#techbubblecontainer {
+    min-width: 320px;
+    width: 500px;
+    height: auto;
+    margin-left: calc(50% - 250px);
+    display: inline-block;
+    margin-top: 150px;
+    background-color: white;
+}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+h2#weltitle {}
+
+
+
+div#learntitle {
+    height: 200px;
+    width: 510px;
+    position: absolute;
+    top: 5%;
+    left: 25%;
+    color: #B66060;
+}
+
+div#learnpositive {
+    display: inline-block;
+    width: 48%;
+    margin-top: 200px;
+    background-color: #E0E0FF;
+    margin-right: 5px;
+    box-shadow: 0px 0px 0px;
+    /* margin-left: 0px; */
+    border: none;
+    text-align: left;
+    border-radius: 0px;
+}
+
+div#learnnegative {
+    display: inline-block;
+    width: 48%;
+    background-color: #E0E0FF;
+    border-radius: 0px;
+    margin-left: 5px;
+    text-align: left;
+    border: none;
+    box-shadow: 0px 0px 0px;
+}
+
+h1#learntitle {}
+
+div#learn {
     width: 80%;
     margin: auto;
-    margin-top: 100px;
-    height: 10px;
-    background-color: #060606;
+    text-align: center;
+}
+
+div#learnnegative {}
+
+li#llist {
+    height: 100px;
+    font-size: 20px;
+    border-bottom-width: 0px;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    box-shadow: 0px 1px 1px rgba(0,0,0,.2);
+}
+
+div#lhead {
+    height: 80px;
+    font-size: 38px;
+    text-align: left;
+    border-bottom: 4px solid transparent;
+    border-color: #BDB0E2;
+    background-color: #BDB0E2;
+    border-radius: 15px;
+    margin-bottom: 15px;
+    box-shadow: 0px 1px 1px rgba(0,0,0,.3);
 }
