--- a/style.css
+++ b/style.css
@@ -100,6 +100,14 @@ body{
 	height:100%;
 }
 
+#page1{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    width: 50%;
+    display: inline-block;
+}
+
 .bubble{
 	border-radius: 50%;
 	height: 220px;
@@ -505,4 +513,25 @@ div#createdppl {
     height: 100%;
     position: relative;
     display: inline-block;
+}
+
+div#page2 {
+    width: 50%;
+    /* background-color: red; */
+    /* z-index: 10; */
+    position: absolute;
+    height: 100%;
+    top: 0px;
+    display: inline-block;
+    right: 0px;
+}
+
+div#pageContainer {
+    width: 200%;
+    position: relative;
+    height: 100%;
+}
+
+div#result {
+    padding-left: 10px;
 }
